# OpenFoodFactsStatic

./: .cursorignore  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SERVER_README.md  docker-compose.yml  download-data.sh
src/: main.rs  server.rs
