[package]
name = "open-food-facts-static"
version = "1.0.0"
edition = "2021"
authors = [""]
description = "A high-performance static server for open food facts data processing"

[[bin]]
name = "process_data"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
brotli = "3.4"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = "0.21"
tokio-rustls = "0.24"
rcgen = "0.11"
rustls-pemfile = "1.0"
time = "0.3"
